[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "neqnn"
version = "0.0.1"
description = "Add your description here"
authors = [{ name = "Matthias Bal", email = "matthiascbal@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["neqnn"]
