[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "neqnn"
version = "0.0.1"
description = "Entropy production in non-equilibrium transformer modules in PyTorch."
authors = [{ name = "Matthias Bal", email = "matthiascbal@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "numpy>=2.4.2",
    "torch>=2.10.0",
    "torchdeq>=0.1.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
audio = [
    "sounddevice>=0.5.5",
]
video = [
    "opencv-python>=4.13.0.92",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["neqnn"]
